@@ -5,7 +5,7 @@
 \encoding{UTF-8}
 %% NB: The date (yyyy-mm-dd) is the "Packaged:" date in ../DESCRIPTION
 
-\section{Changes in version 1.5-3 (2022-10-28 r3712)}{
+\section{Changes in version 1.5-3 (2022-10-28 r3713)}{
   \subsection{Bug Fixes}{
     \itemize{
       \item \code{dimScale(x)} with argument \code{d1} missing is no
@@ -25,6 +25,8 @@
 
       \item \code{diag(x) <- value} is now done in C also for
       \code{[CRT]sparseMatrix}.
+
+      \item \code{.diagU2N()} gets fast counterpart \code{.diagN2U()}.
     }
   }
 }
